Fix stats gap

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -29,9 +29,9 @@
     left: 10px;
     top: 8px;
     z-index: 1;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(0,0,0,0)), color-stop(rgba(3, 119, 3, 0.84)), to(rgba(0,0,0,0)));
-    background: -o-linear-gradient(left, rgba(0,0,0,0), rgba(3, 119, 3, 0.84), rgba(0,0,0,0));
-    background: linear-gradient(0.25turn, rgba(0,0,0,0), rgba(3, 119, 3, 0.84), rgba(0,0,0,0));
+    background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(3, 119, 3, 0.84)), to(rgba(0, 0, 0, 0)));
+    background: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(3, 119, 3, 0.84), rgba(0, 0, 0, 0));
+    background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgba(3, 119, 3, 0.84), rgba(0, 0, 0, 0));
   }
 
   &[href]:focus::after,
@@ -92,9 +92,9 @@
     &:focus::before,
     &:hover::before {
       animation: opacity-alternate 1s ease-in-out 0s infinite alternate;
-      background: -webkit-gradient(linear, left top, right top, from(rgba(0,0,0,0)), color-stop(rgba(3, 119, 3, 0.84)), to(rgba(0,0,0,0)));
-      background: -o-linear-gradient(left, rgba(0,0,0,0), rgba(3, 119, 3, 0.84), rgba(0,0,0,0));
-      background: linear-gradient(0.25turn, rgba(0,0,0,0), rgba(3, 119, 3, 0.84), rgba(0,0,0,0));
+      background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(3, 119, 3, 0.84)), to(rgba(0, 0, 0, 0)));
+      background: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(3, 119, 3, 0.84), rgba(0, 0, 0, 0));
+      background: linear-gradient(0.25turn, rgba(0, 0, 0, 0), rgba(3, 119, 3, 0.84), rgba(0, 0, 0, 0));
     }
 
     &--external {
@@ -125,11 +125,11 @@
   li ul {
     padding-left: 26px;
 
-    & > li {
+    &>li {
       position: relative;
     }
 
-    &:first-of-type > li::before {
+    &:first-of-type>li::before {
       content: '';
       display: block;
       position: absolute;
@@ -141,7 +141,7 @@
       z-index: -1;
     }
 
-    &:first-of-type > li::after {
+    &:first-of-type>li::after {
       content: '';
       display: block;
       position: absolute;
@@ -153,9 +153,9 @@
       z-index: -1;
     }
 
-    &.multiple-children > li:not(:last-child)::before {
+    &.multiple-children>li:not(:last-child)::before {
       height: 100%;
-    } 
+    }
   }
 
   a span {
@@ -471,7 +471,7 @@ $ranks: (
         margin: 0 auto;
       }
     }
-    
+
     .sharpness::after {
       content: '';
       width: 100%;
@@ -509,7 +509,7 @@ $ranks: (
       span {
         color: white;
       }
-      
+
       .details {
         display: flex;
         flex-direction: column;
@@ -529,7 +529,7 @@ $ranks: (
       p {
         line-height: 1.25;
       }
-      
+
       .icon {
         margin-left: auto;
         margin: 1.2rem calc((16.8rem - 9rem) / 2) 0 auto;
@@ -614,6 +614,7 @@ $ranks: (
     }
 
     .shots {
+
       span.orange,
       .orange span {
         color: #FF9661;
@@ -651,7 +652,7 @@ $ranks: (
       flex: 1 1 0%;
       gap: 13px;
 
-      & > :first-child {
+      &> :first-child {
         width: 100%;
         font-size: inherit;
         margin: 0;
@@ -659,7 +660,7 @@ $ranks: (
         font-weight: normal;
       }
 
-      > div {
+      >div {
         display: flex;
 
         h3 {
@@ -687,8 +688,9 @@ $ranks: (
       flex-flow: column wrap;
       height: 11rem;
 
-      > div {
-        display: block;
+      >div {
+        display: flex;
+        gap: 0.5rem;
         line-height: 1;
       }
 
@@ -726,24 +728,24 @@ $ranks: (
       }
 
       &--armor {
-        > div {
+        >div {
           display: flex;
           padding-right: 1.6rem;
           line-height: 1;
         }
-  
+
         h3 {
           display: inline-flex;
           color: #ffff50;
           width: 10ch;
         }
-  
-        h3 ~ p:last-child {
+
+        h3~p:last-child {
           color: white;
           width: 4ch;
           text-align: right;
         }
-  
+
         h3 span {
           color: inherit;
           margin-left: auto;
@@ -776,7 +778,7 @@ $ranks: (
         align-items: center;
         display: flex;
       }
-      
+
       &.improve_mats .create_mats,
       &.create_mats .improve_mats {
         display: none;
@@ -805,15 +807,19 @@ $ranks: (
       &[data-weapon-page-page-value="1"] #page-1 {
         display: flex;
       }
+
       &[data-weapon-page-page-value="2"] #page-2 {
         display: flex;
       }
+
       &[data-weapon-page-page-value="3"] #page-3 {
         display: flex;
       }
+
       &[data-weapon-page-page-value="4"] #page-4 {
         display: flex;
       }
+
       &[data-weapon-page-page-value="5"] #page-5 {
         display: flex;
       }
@@ -830,7 +836,7 @@ $ranks: (
     }
 
     .locations {
-      & > p {
+      &>p {
         background-color: rgba(255, 255, 255, 0.2);
         text-align: center;
         margin: -1.4rem 0 1.4rem 0;
@@ -843,13 +849,13 @@ $ranks: (
         gap: 0 0.6rem;
       }
 
-      .list > div {
+      .list>div {
         align-items: center;
         display: flex;
         flex: 1 1 45%;
       }
     }
-    
+
     hr {
       margin: 0;
     }
@@ -897,7 +903,7 @@ $sharpness-colors: (
   4: #84C11C,
   5: #5A8AED,
   6: #F7F7F7,
-  7: #DF78F6, 
+  7: #DF78F6,
 );
 
 .sharpness {
@@ -956,13 +962,13 @@ table.monster-hz {
   table-layout: fixed;
   border-collapse: collapse;
 
-  
+
   th:first-of-type {
     color: #f2d250;
     width: auto;
     text-align: left;
   }
-  
+
   tr th {
     text-align: center;
   }
@@ -988,10 +994,11 @@ table.monster-hz {
     right: 1px;
     width: 1px;
   }
-  
+
   .icon {
     margin: 0 auto;
   }
+
   .icon,
   .icon img {
     height: 22px;
@@ -1028,11 +1035,11 @@ table.min {
   th:first-of-type {
     color: #f2d250;
   }
-  
+
   th:last-of-type {
     width: 100%;
   }
-  
+
   td:nth-of-type(2) {
     text-align: center;
   }
@@ -1040,7 +1047,7 @@ table.min {
   .gray {
     color: gray;
   }
-  
+
   .rapid {
     color: #52F152;
   }
